--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,21 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XKE6G9K0KY"
+    ></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      const gtag = () => dataLayer.push(arguments);
+
+      gtag("js", new Date());
+
+      gtag("config", "G-XKE6G9K0KY");
+    </script>
   </body>
 </html>
